@@ -10,6 +10,8 @@
 	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
 	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
 	- Added support for multiple spaces before the ring number.
+- Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction
+	from errorneous MLCAD syntax ('0 BFC CERTIFY CLIP').
 
 =================================================
 == Changes in version 0.2-alpha
